added basic login and signup

--- a/movies/templates/movies/home.html
+++ b/movies/templates/movies/home.html
@@ -1,7 +1,9 @@
-{% extends 'movies/base.html' %}
-{% block body %}
+<!Doctype>
+<html>
+
+<body>
 <div>
 <h1>Home page</h1>
 </div>
-
-{% endblock %}
+</body>
+</html>
