--- a/movies/templates/movies/interests.html
+++ b/movies/templates/movies/interests.html
@@ -10,7 +10,7 @@
             <div class="panel panel-default">
                 <div class="panel-body">
                     <h3>test</h3>
-<form action="{% url  'movies:home' %}" method="post">
+<form action="{% url  'movies:reg_home' %}" method="post">
      {% csrf_token %}
     {{ genreform.as_p }}
 
