--- a/movies/templates/movies/home.html
+++ b/movies/templates/movies/home.html
@@ -1,9 +1,148 @@
-<!Doctype>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}MRS{% endblock %}</title>
+    {% load staticfiles %}
+    <link rel="shortcut icon" type="image/png" href="{%  static 'favicon.ico' %}"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <link href="http://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
+
+     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css" rel="stylesheet">
+<link href="{% static 'movies/star-rating.css' %}" media="all" rel="stylesheet" type="text/css" />
+
+<!-- optionally if you need to use a theme, then include the theme CSS file as mentioned below -->
+<link href="{% static 'movies/theme.css' %}" media="all" rel="stylesheet" type="text/css" />
+
+<!-- important mandatory libraries -->
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.js"></script>
+<script src="{% static 'movies/js/star-rating.js' %}" type="text/javascript"></script>
+
+<!-- optionally if you need to use a theme, then include the theme JS file as mentioned below -->
+<script src="{% static 'movies/js/theme.js' %}"></script>
+
+    {% block head %}
+    {% endblock %}
+</head>
 <body>
-<div>
-<h1>Home page</h1>
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+
+        <!-- Header -->
+        <div class="navbar-header">
+            <a class="navbar-brand" href="{% url 'movies:home' %}">MRS</a>
+        </div>
+
+        <!-- Items -->
+        <div class="collapse navbar-collapse" id="topNavBar">
+
+            <form class="navbar-form navbar-left" role="search" method="get" action="{% url 'movies:home' %}">
+                <div class="form-group">
+                    <input type="text" class="form-control" name="q" value="{{ request.GET.q }}">
+                </div>
+                <button type="submit" class="btn btn-default">Search</button>
+            </form>
+             <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a href="{% url 'movies:logout_user' %}">
+                        <span class="glyphicon glyphicon-off" aria-hidden="true"></span>&nbsp; Logout
+                    </a>
+                </li>
+            </ul>
+
+        </div>
+
+    </div>
+</nav>
+<!--{% for movie in dict %}-->
+    <!--<div>-->
+        <!--<p>movie:{{ movie.title }}</p>-->
+        <!--<h3><a href="">{{ movie.image.url }}</a></h3>-->
+        <!--<p>year:{{ movie.year }}</p>-->
+    <!--</div>-->
+<!--{% endfor %}-->
+    <!--{% load staticfiles %}-->
+<!--<br>-->
+<!--<br>-->
+<div class="row-fluid">
+
+   <h4> Popular Movies</h4>
+{% for movie in dict %}
+        {% csrf_token %}
+    <div class="col-lg-2">
+        {% for i in movie %}
+        <img src="{{i}}"  style="align=middle;margin:auto; width:150px;height:200px;display:block">
+        {% endfor %}
+
+
+  </div>
+{% endfor %}
+
+
+
+{% for movie in moviedetails %}
+    <div class="col-lg-2">
+                {% csrf_token %}
+      <!--Sidebar content-->
+        {% for i in movie %}
+        {% csrf_token %}
+            {{i}}
+
+
+        {% endfor %}
+        <input id="input-3-xs" class="rating rating-loading" value="0" data-show-caption="false" data-show-clear="false" data-min="0" data-max="5" data-step="0.5" data-size="xs">
+
+      &nbsp&nbsp&nbsp&nbsp
+  </div>
+{% endfor %}
 </div>
+
+
+
+<div class="row-fluid">
+    <br>
+    <br>
+    <br>
+   <h4 align="left"> Genre Based Top Movies</h4>
+        {% csrf_token %}
+     {% for i in k1 %}
+    <div class="col-lg-2">
+
+        <img src="{{i}}"  style="margin:auto; width:150px;height:200px;display:block">
+  </div>
+    {% endfor %}
+
+{% for i in k2 %}
+    <div class="col-lg-2">
+                {% csrf_token %}
+      <!--Sidebar content-->
+
+        {% csrf_token %}
+            {{i}}
+
+        <input id="input-4-xs" class="rating rating-loading" value="0" data-show-caption="false" data-show-clear="false" data-min="0" data-max="5" data-step="0.5" data-size="xs">
+
+  </div>
+            {% endfor %}
+
+</div>
+
+{% block body %}
+{% endblock %}
 </body>
 </html>
+<script type="text/javascript">
+
+   $('.rate').rating({
+      size:20,                      //this option defines the size of the star
+      primaryColor:"#999",         //this color code defines the primary color of stars
+      hoverColor:"#0066ff",        //this color code defines the hover state of stars
+      count:5                      //defines the number of stars you want in a rater
+   });
+
+
+</script>
