--- a/movies/static/movies/theme.css
+++ b/movies/static/movies/theme.css
@@ -105,3 +105,30 @@
 .theme-krajee-svg.rating-rtl.is-heart .empty-stars {
     margin-right: 0.01em;
 }
+
+
+.image {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+/* The overlay effect - lays on top of the container and over the image */
+.overlay {
+  position: absolute;
+  bottom: 0;
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.5); /* Black see-through */
+  color: #f1f1f1;
+  width: 100%;
+  transition: .5s ease;
+  opacity:0;
+  color: white;
+  font-size: 20px;
+  padding: 20px;
+  text-align: center;
+}
+
+.col-lg-2:hover .overlay {
+  opacity: 1;
+}
