--- a/movies/templates/movies/base.html
+++ b/movies/templates/movies/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>{% block title %}MRS{% endblock %}</title>
     {% load staticfiles %}
-    <link rel="shortcut icon" type="image/png" href="{%  static 'favicon.ico' %}"/>
+    <link rel="shortcut icon" type="image/png" href="{%  static 'tempicon.ico' %}"/>
 	<link rel="stylesheet" type="text/css" href="{% static 'movies/style.css' %}" />
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
