--- a/movies/templates/movies/home.html
+++ b/movies/templates/movies/home.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <title>{% block title %}MRS{% endblock %}</title>
     {% load staticfiles %}
-    <link rel="shortcut icon" type="image/png" href="{%  static 'favicon.ico' %}"/>
+    <link rel="shortcut icon" type="image/png" href="{%  static 'tempicon.ico' %}"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link href='https://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
