--- a/movies/templates/movies/home.html
+++ b/movies/templates/movies/home.html
@@ -12,12 +12,11 @@
     <link href="http://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
-    <link rel="stylesheet" href="owlcarousel/owl.carousel.min.css">
 
-    <link rel="stylesheet" href="owlcarousel/owl.theme.default.min.css">
 
      <link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css" rel="stylesheet">
 <link href="{% static 'movies/star-rating.css' %}" media="all" rel="stylesheet" type="text/css" />
+
 
 <!-- optionally if you need to use a theme, then include the theme CSS file as mentioned below -->
     <link href="{% static 'movies/cutShort.css' %}" media="all" rel="stylesheet" type="text/css" />
@@ -30,6 +29,11 @@
 
 <!-- optionally if you need to use a theme, then include the theme JS file as mentioned below -->
 <script src="{% static 'movies/js/theme.js' %}"></script>
+        <script src="{% static 'movies/js/owl.carousel.min.js' %}"></script>
+
+    <link href="{% static 'movies/owl.carousel.min.css' %}" media="all" rel="stylesheet" type="text/css" />
+    <link href="{% static 'movies/owl.theme.default.min.css' %}" media="all" rel="stylesheet" type="text/css" />
+
 
 <style>
 .carousel-inner .active.left { left: -33%; }
@@ -49,7 +53,7 @@
 /* The overlay effect - lays on top of the container and over the image */
 .overlay {
   position: absolute;
-  bottom: 0;
+  bottom: 40;
   background: rgb(0, 0, 0);
   background: rgba(0, 0, 0, 0.5); /* Black see-through */
   color: #f1f1f1;
@@ -63,7 +67,7 @@
   text-align: center;
 }
 
-.col-lg-2:hover .overlay {
+.item:hover .overlay {
   opacity: 1;
 }
 </style>
@@ -108,27 +112,21 @@
     <!--{% load staticfiles %}-->
 <!--<br>-->
 <!--<br>-->
-<div class="owl-carousel owl-theme">
-   <h4> Popular Movies</h4>
-{% for movie in dict %}
-        {% csrf_token %}
+
+<h4 align="left" style="padding-left:10px"> Genre Based Top Movies</h4>
+
+<div class="owl-carousel owl-theme" style="padding-left:10px">
+{% for movie in newlist %}
     <div class="item">
-
-        {% for i in movie %}
-
-            {% if forloop.last %}
-                 <img src="{{i}}"  style="width:170px;height:230px;display:block" class="image">
-
-
-            {% else %}
-
-                {% for key,value in i.items%}
+        <img src="{{movie.0}}"  style="width:170px;height:230px;display:block" class="image">
+        {% for key,value in movie.1.items%}
                      <a href="{% url 'movies:detail' key %}" role="button" ><div class="overlay">{{value}}</div></a>
-
-                {% endfor %}
-
-            {% endif %}
-
+        {% endfor %}
+        <div class = "cut-text">
+                {{movie.2}}
+        </div>
+        {% for key1,value1 in movie.3.items %}
+            <input id="{{key1}}"  class="rating rating-loading" value={{value1}} data-show-caption="false" data-show-clear="false" data-min="0" data-max="5" data-step="0.1" data-size="xs" >
         {% endfor %}
 
   </div>
@@ -136,77 +134,31 @@
 </div>
 
 
-<div class="row-fluid">
-{% for movie in moviedetails %}
-    <div class="col-lg-2">
-                {% csrf_token %}
-      <!--Sidebar content-->
-        {% for i in movie %}
-        {% csrf_token %}
-         {% if forloop.last %}
-               {% if i %}
-            <input id="input-3-xs-{{forloop.parentloop.counter}}"  class="rating rating-loading" value={{i}} data-show-caption="false" data-show-clear="false" data-min="0" data-max="5" data-step="0.1" data-size="xs" >
+
+
+<h4 style="padding-left:10px"> Popular Movies</h4>
+<div class="owl-carousel owl-theme" style="padding-left:10px">
+{% for movie in dict %}
+    <div class="item">
+        <img src="{{movie.0}}"  style="width:170px;height:230px;display:block" class="image">
+        {% for key,value in movie.1.items%}
+                     <a href="{% url 'movies:detail' key %}" role="button" ><div class="overlay">{{value}}</div></a>
+        {% endfor %}
+        <div class = "cut-text">
+                {{movie.2}}
+        </div>
+        {% if movie.3 %}
+            <input id="input-3-xs"  class="rating rating-loading" value={{movie.3}} data-show-caption="false" data-show-clear="false" data-min="0" data-max="5" data-step="0.1" data-size="xs" >
             {% else %}
               <b>Not yet23 Released</b>
-              {% endif %}
-         {% else %}
-             <div class = "cut-text">
-                {{i}}
-              </div>
-         {% endif %}
-        {% endfor %}
-
-      &nbsp&nbsp&nbsp&nbsp
-  </div>
-{% endfor %}
-</div>
-
-
-
-<div class="row-fluid">
-    <br>
-    &nbsp&nbsp&nbsp&nbsp
-   <h4 align="left"> Genre Based Top Movies</h4>
-        {% csrf_token %}
-    {% for mov in k1 %}
-        {% csrf_token %}
-    <div class="col-lg-2">
-        {% for i in mov %}
-            {% if forloop.first %}
-                 <img src="{{i}}"  style="width:170px;height:230px;display:block" class="image">
-            {% else %}
-                {% for key,value in i.items%}
-                     <a href="{% url 'movies:detail' key %}" role="button" ><div class="overlay">{{value}}</div></a>
-
-                {% endfor %}
-
-            {% endif %}
-
-        {% endfor %}
-
-  </div>
-{% endfor %}
-</div>
-
-<div class="row-fluid">
-{% for j in k2 %}
-     <div class="col-lg-2">
-    {% for i in j %}
-        {% if forloop.first %}
-                <div class = "cut-text">
-                         {{i}}
-                  </div>
-        {% else %}
-            {% for key,value in i.items %}
-                <input id="{{key}}" class="rating rating-loading" value="{{value}}" data-show-caption="false" data-show-clear="false" data-min="0" data-max="5" data-step="0.1" data-size="xs">
-
-            {% endfor %}
         {% endif %}
 
-    {% endfor %}
-     </div>
-    {% endfor %}
+  </div>
+{% endfor %}
 </div>
+
+
+
 {% block body %}
 {% endblock %}
 </div>
@@ -243,8 +195,9 @@ $('input').on('rating:change', function(event, value, caption) {
 });
 
 $('.owl-carousel').owlCarousel({
-    loop:true,
-    margin:10,
+    loop:false,
+    margin:6,
+    lazyLoad:true,
     nav:true,
     responsive:{
         0:{
